# 2D_Engine

./: .gitignore  CMakeLists.txt  README.md
include/z2engine/: core.h  z2engine.h
include/z2engine/core/: math.h
include/z2engine/core/math/: vector2.h
